plugins {
    id "application"
    id "io.github.jwharm.flatpak-gradle-generator" version "1.5.0"
}

repositories {
    mavenLocal()
    mavenCentral()
    maven { url = "build/repository" } // used by flatpak-builder
}

dependencies {
    implementation "org.java-gi:adw:0.13.0-RC1"
}

// Generate a file with all dependency urls for the offline flatpak build
tasks.flatpakGradleGenerator {
    outputFile.set(file("$rootDir/data/maven-dependencies.json"))
    downloadDirectory.set("build/repository")
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(23)
    }
}

tasks.named('installDist') {
    destinationDir = file('/app')
}

application {
    applicationName = "example"
    mainClass = "org.domain.Example"
    applicationDefaultJvmArgs += "--enable-native-access=ALL-UNNAMED"
}

